# cellular-automata

./: .gitignore  CMakeLists.txt  Chunk.h  LICENSE  README.md  main.cpp  resources.qrc
gol/: Chunk.cpp  Chunk.h  Neighbourhood.cpp  Neighbourhood.h  Side.cpp  Side.h  Topology.cpp  Topology.h
src/: Automaton.cpp  Automaton.h  AutomatonScene.cpp  AutomatonScene.h  Board.h  Chunk.cpp  Chunk.h  ChunkGraphicsItem.cpp  ChunkGraphicsItem.h  GraphicsProperties.cpp  GraphicsProperties.h  Neighbourhood.cpp  Neighbourhood.h  NeighbourhoodDialog.cpp  NeighbourhoodDialog.h  RulesDialog.cpp  RulesDialog.h  Ruleset.cpp  Ruleset.h  Side.cpp  Side.h  Topology.cpp  Topology.h  TopologyDialog.cpp  TopologyDialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  neighbourhooddialog.ui  rulesdialog.ui  topologydialog.ui  util.h
